--- a/src/EmailComponents/ResetPasswordTemplate.razor
+++ b/src/EmailComponents/ResetPasswordTemplate.razor
@@ -1,28 +1,35 @@
-﻿@using BackendAuthTemplate.EmailComponents.Shared
+@using BackendAuthTemplate.EmailComponents.Shared
 @namespace BackendAuthTemplate.EmailComponents
 @inherits ComponentBase
 
-<div style="@Styles.Wrapper">
-  <div style="@Styles.Card">
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <title>Réinitialisation du mot de passe 🔒</title>
+    </head>
+    <body style="@Styles.Wrapper">
+      <div style="@Styles.Card">
 
-      <h1>Réinitialisation du mot de passe 🔒</h1>
-      <p>Nous avons reçu une demande pour réinitialiser votre mot de passe.  
-         Cliquez sur le bouton ci-dessous :</p>
+          <h1>Réinitialisation du mot de passe 🔒</h1>
+          <p>Nous avons reçu une demande pour réinitialiser votre mot de passe.  
+             Cliquez sur le bouton ci-dessous :</p>
 
-      <a href="@ResetUrl"
-         style="@($"{Styles.Button};background:#DC3545;color:#fff")">
-          Réinitialiser mon mot de passe
-      </a>
+          <a href="@ResetUrl"
+             style="@($"{Styles.Button};background:#DC3545;color:#fff")">
+              Réinitialiser mon mot de passe
+          </a>
 
-      <NoReplyDisclaimer />
+          <NoReplyDisclaimer />
 
-      <div style="@Styles.Footer">
-          Ce lien est valable pendant @ValidMinutes minutes.<br/><br/>
-          Si vous n'avez pas demandé cette réinitialisation, ignorez cet e-mail.
+          <div style="@Styles.Footer">
+              Ce lien est valable pendant @ValidMinutes minutes.<br/><br/>
+              Si vous n'avez pas demandé cette réinitialisation, ignorez cet e-mail.
+          </div>
+
       </div>
-
-  </div>
-</div>
+    </body>
+</html>
 
 @code {
     [Parameter, EditorRequired] public string ResetUrl { get; set; } = default!;
